<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/circleName_userlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="52dp"
        android:gravity="center_horizontal"
        android:text="@string/circle_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/circleSwitchButt"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="45dp"
        android:layout_weight="1"
        android:text="@string/switch_circle"
        app:layout_constraintBottom_toTopOf="@+id/podRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leaveCircleBut"
        app:layout_constraintTop_toBottomOf="@+id/circleName_userlist"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/leaveCircleBut"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="45dp"
        android:layout_weight="1"
        android:text="@string/leave_circle"
        app:layout_constraintBottom_toTopOf="@+id/podRecyclerView"
        app:layout_constraintEnd_toStartOf="@+id/circleSwitchButt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleName_userlist"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/podRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/device_status"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="9dp"
        android:text="@string/pair_device"
        app:layout_constraintBottom_toTopOf="@+id/circleSwitchButt"
        app:layout_constraintEnd_toStartOf="@+id/butt_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleName_userlist"
        app:layout_constraintVertical_bias="0.21" />

    <Button
        android:id="@+id/butt_logout"
        android:layout_width="127dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginBottom="27dp"
        android:text="Log Out"
        app:layout_constraintBottom_toTopOf="@+id/circleSwitchButt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleName_userlist" />


</androidx.constraintlayout.widget.ConstraintLayout>








